# SthFightingGame

./: CMakeLists.txt  README.md
src/characters/: axl_low.cpp  axl_low.h  milia_rage.cpp  milia_rage.h
src/core/: choosechars.cpp  entities.h  game.h  main.cpp  menu.cpp  player.cpp  player.h
src/engine/: collision.cpp  facing.cpp
